Исправлет блок hero на pp

--- a/source/index.html
+++ b/source/index.html
@@ -488,7 +488,7 @@
           <div class="faq__accordion faq-accordion">
             <ul class="faq-accordion__list list-reset">
               <li class="faq-accordion__item faq-accordion__item--show">
-                <button type="button">
+                <button type="button" active>
                   Как стать членом фитнес&#8209;центра?
                 </button>
                 <div>
@@ -599,8 +599,8 @@
       <div class="main-footer__wrapper">
         <div class="main-footer__logo">
           <picture>
-            <source width="136" height="26" type="image/svg" srcset="./img/footer-logo-desktop.svg" media="(min-width: 1366px)">
-            <source width="110" height="22" type="image/svg" srcset="./img/footer-logo-tablet.svg" media="(min-width: 768px)">
+            <source width="136" height="26" type="image/svg+xml" srcset="./img/footer-logo-desktop.svg" media="(min-width: 1366px)">
+            <source width="110" height="22" type="image/svg+xml" srcset="./img/footer-logo-tablet.svg" media="(min-width: 768px)">
             <img class="main-footer__logo-img" src="./img/supergym-logo.svg" width="100" height="20" alt="Товарный знак компании Supergym">
           </picture>
         </div>
